fix: image align left or right for rtl languages fix: image padding //not sure fix: post top header space fix text-shadow, add blur

--- a/sidebar.css
+++ b/sidebar.css
@@ -3,3 +3,9 @@
     width: 70%;
   }
 }
+
+@media print{
+  #sidebar {
+    display: none;
+  }
+}
